# mcp-kr-legislation

./: .env  .gitignore  LICENSE  README.md  README_en.md  comprehensive_improvement_report.md  english_law_search_workflow_guide.md  law_search_workflow_guide.md  law_tools_test_prompts.md  law_tools_test_prompts_civil_law.md  law_tools_test_prompts_financial_tax_privacy.md  pyproject.toml  requirements.txt  server.py  test_api_behavior.py  test_improved_search.py  test_mst_display.py  test_semantic_search.py
src/mcp_kr_legislation/: __init__.py  config.py  server.py
src/mcp_kr_legislation/apis/: __init__.py  apt_rent.py  apt_trade.py  client.py  ecos_api.py  indutrade.py  land_trade.py  law_api.py  legislation_api.py  officetel_rent.py  officetel_trade.py  reb_api.py  region_code_api.py  rh_rent.py  rh_trade.py  sh_rent.py  sh_trade.py
src/mcp_kr_legislation/registry/: __init__.py  initialize_registry.py  tool_registry.py
src/mcp_kr_legislation/tools/: __init__.py  additional_service_tools.py  administrative_rule_tools.py  advanced_analysis_tools.py  ai_tools.py  analysis_tools.py  committee_tools.py  custom_tools.py  law_tools.py  legal_term_tools.py  legislation_tools.py  legislation_tools_final.py  legislation_tools_part2.py  legislation_tools_part3.py  linkage_tools.py  ministry_detail_tools.py  ministry_interpretation_tools.py  misc_tools.py  optimized_law_tools.py  precedent_tools.py  specialized_tools.py
src/mcp_kr_legislation/utils/: __init__.py  ctx_helper.py  data_processor.py  korean_law_api_complete_guide.md  law_tools_utils.py  legislation_utils.py  region_codes.py  (+1 more)
(+572 files in other folders)
