[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-kr-legislation"
version = "0.2.0"
description = "한국 법제처 OPEN API 125개 완전 통합 MCP 서버 - 법령/행정규칙/자치법규/판례/조약/위원회결정문 등 종합 법령정보 제공"
authors = [
    { name = "Changoo Lee", email = "lchangoo@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/ChangooLee/mcp-kr-legislation"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
mcp-kr-legislation = "mcp_kr_legislation.server:main" 